word-wrap fixed in messages

--- a/app/assets/stylesheets/pages/_chatroom.scss
+++ b/app/assets/stylesheets/pages/_chatroom.scss
@@ -58,6 +58,7 @@
     padding: 8px;
     margin: 8px 0px;
     align-self: end;
+    word-break: break-word;
     p {
         margin: 0px;
         font-size: 14px;
